--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -11,6 +11,14 @@
     <packaging>war</packaging>
     <name>gameoflife-web</name>
 
+    <repositories>
+        <repository>
+            <id>alimaven</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <jetty.port>9090</jetty.port>
         <jetty.stop.port>9999</jetty.stop.port>
