--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -11,13 +11,13 @@
     <packaging>war</packaging>
     <name>gameoflife-web</name>
 
-    <repositories>
-        <repository>
-            <id>alimaven</id>
-            <name>aliyun maven</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>alimaven</id>-->
+            <!--<name>aliyun maven</name>-->
+            <!--<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
     <properties>
         <jetty.port>9090</jetty.port>
