注释pom中的core依赖

--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -25,7 +25,7 @@
     </properties>
 
     <build>
-        <!--<finalName>gameoflife</finalName>-->
+        <finalName>gameoflife</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -124,11 +124,11 @@
         </profile>
     </profiles>
     <dependencies>
-        <dependency>
-            <groupId>com.wakaleo.gameoflife</groupId>
-            <artifactId>gameoflife-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.wakaleo.gameoflife</groupId>-->
+            <!--<artifactId>gameoflife-core</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
