--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -124,11 +124,11 @@
         </profile>
     </profiles>
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>com.wakaleo.gameoflife</groupId>-->
-            <!--<artifactId>gameoflife-core</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.wakaleo.gameoflife</groupId>
+            <artifactId>gameoflife-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
